apps/media/traefik/traefik-dashboard-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-headers
  namespace: kube-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: /dashboard
