apps/media/traefik/traefik-dashboard-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-strip
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /dashboard
