apps/media/traefik/traefik-ping.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ping
  namespace: kube-system
spec:
  plugin:
    response:
      content: "OK"
      status: 200
