apps/media/traefik/traefik-values.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/instance: traefik-kube-system
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      automountServiceAccountToken: true
      serviceAccountName: traefik
      restartPolicy: Always
      serviceAccountName: traefik
      containers:
      - name: traefik
        image: docker.io/traefik:v3.6.7
        imagePullPolicy: IfNotPresent
        args:
          - --entryPoints.web.address=:8080/tcp
          - --entryPoints.websecure.address=:8443/tcp
          - --entryPoints.traefik.address=:9000/tcp
          - --entryPoints.metrics.address=:9110/tcp
          - --api.dashboard=true
          - --ping=true
          - --log.level=DEBUG
          - --accesslog=true
          - --accesslog.format=json
          - --metrics.prometheus=true
          - --metrics.prometheus.entrypoint=metrics
          - --providers.kubernetescrd
          - --providers.kubernetescrd.allowEmptyServices=true
          - --metrics.prometheus.addEntryPointsLabels=true
          - --metrics.prometheus.addServicesLabels=true
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 8443
          name: websecure
          protocol: TCP
        - containerPort: 9000
          name: traefik
          protocol: TCP
        - containerPort: 9110
          name: metrics
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - name: data
          mountPath: /data
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: data
        emptyDir: {}
      - name: tmp
        emptyDir: {}
