apps/media/traefik/traefik-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: dashboard
      port: 9000
      targetPort: 9000
