apps/media/traefik/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: web
      port: 8080
      targetPort: 8080
      nodePort: 30808
    - name: websecure
      port: 8443
      targetPort: 8443
      nodePort: 30443
    - name: dashboard
      port: 9000
      targetPort: 9000
      nodePort: 30900
    - name: metrics
      port: 9100
      targetPort: 9100
      nodePort: 31000
